@@ -2,11 +2,14 @@
 fuzzySim v3.96 (committed 2022-03-22)
 ============================================
 
+## Modified functions:
+
 * sharedFav
 - improved help file and corrected a mistake (bug report by Alba Estrada)
 - replaced 'main' argument with '...' for barplot (to accept also 'las')
 - plot now produced in phases as computations are made, to have something plotted even in case of error
-- 'conf' can be set to NA, to avoid error and sill get value and plot (without CIs)
+- 'conf' can be set to NA, to avoid error and still get values and plot (without CIs)
+- returned value now includes 'FOvI' and 'bins_table'
 
 
 ============================================
